force-app/main/default/objects/PS_ASU_SP_FA_SUM_V__x/PS_ASU_SP_FA_SUM_V__x.object-meta.xml
<CustomObject>
    <description>Data source script can be found here: https://docs.google.com/document/d/1D-rxaiNmbgIQ2svrT1e7m4pjQb_ytsmt_y6LuyeehNM/edit</description>
    <externalDataSource>MuleOdataApi</externalDataSource>
    <externalName>PS_ASU_SP_FA_SUM_Vs</externalName>
    <label>Financial Aid Summary (external)</label>
    <pluralLabel>Financial Aid Summary (external)</pluralLabel>
</CustomObject>