force-app/main/default/objects/PS_ASU_SP_FA_SUM_V__x/fields/ACCEPT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>ACCEPT_AMOUNT__c</fullName>
    <description>Data sourced from PS_STDNT_AWARDS.ACCEPT_AMOUNT</description>
    <externalDeveloperName>ACCEPT_AMOUNT</externalDeveloperName>
    <label>Accepted Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>