force-app/main/default/objects/PS_ASU_SP_FA_SUM_V__x/fields/AID_YEAR__c.field-meta.xml
<CustomField>
    <fullName>AID_YEAR__c</fullName>
    <description>Data sourced from PS_STDNT_AWARDS.AID_YEAR</description>
    <externalDeveloperName>AID_YEAR</externalDeveloperName>
    <label>Aid Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>