force-app/main/default/objects/PS_ASU_SP_FA_SUM_V__x/fields/DESCR__c.field-meta.xml
<CustomField>
    <fullName>DESCR__c</fullName>
    <description>Data sourced from PS_AID_YEAR_TBL.DESCR</description>
    <externalDeveloperName>DESCR</externalDeveloperName>
    <label>Academic Year</label>
    <length>12</length>
    <type>Text</type>
</CustomField>