force-app/main/default/objects/PS_ASU_SP_FA_SUM_V__x/fields/DESCR_CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>DESCR_CATEGORY__c</fullName>
    <description>Data sourced from PSXLATITEM.XLATLONGNAME</description>
    <externalDeveloperName>DESCR_CATEGORY</externalDeveloperName>
    <label>Category</label>
    <length>25</length>
    <type>Text</type>
</CustomField>