force-app/main/default/objects/PS_ASU_SP_FA_SUM_V__x/fields/DISBURSED_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>DISBURSED_AMOUNT__c</fullName>
    <description>Data sourced from PS_STDNT_AWARDS.DISBURSED_AMOUNT</description>
    <externalDeveloperName>DISBURSED_AMOUNT</externalDeveloperName>
    <label>Disbursed Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>