force-app/main/default/objects/PS_ASU_SP_FA_SUM_V__x/fields/OFFER_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>OFFER_AMOUNT__c</fullName>
    <description>Data sourced from PS_STDNT_AWARDS.OFFER_AMOUNT</description>
    <externalDeveloperName>OFFER_AMOUNT</externalDeveloperName>
    <label>Offer Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>