force-app/main/default/objects/PS_ASU_SP_FA_SUM_V__x/fields/SFA_CR_AWARD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SFA_CR_AWARD_TYPE__c</fullName>
    <description>Data sourced from PS_ASU_FA_ITEM_VW.DESCR</description>
    <externalDeveloperName>SFA_CR_AWARD_TYPE</externalDeveloperName>
    <label>Award Summary</label>
    <length>55</length>
    <type>Text</type>
</CustomField>